<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FactoryActivity">

    <TextView

        android:gravity="center"
        android:id="@+id/tv_title"
        android:text="@string/factory_activity"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp" />

    <EditText
        android:layout_marginTop="14dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/tv_title"
        android:hint="@string/et_input_numberA_hint"
        android:id="@+id/et_input_number_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:inputType="numberDecimal"
        android:layout_below="@+id/et_input_number_A"
        android:hint="@string/et_input_numberB_hint"
        android:id="@+id/et_input_number_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/et_input_number_B"
        android:layout_alignParentStart="true" />

    <TextView
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_results"
        android:hint="@string/tv_result"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <Button
        android:onClick="calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:id="@+id/btn_calculate"
        android:layout_below="@+id/tv_results"
        android:layout_alignParentStart="true" />

</RelativeLayout>
